{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 21,
  "lineage": "c0f06267-8821-8ed4-5b51-a59095f6d107",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0009f0c4964e4e0f9",
            "arn": "arn:aws:ec2:eu-north-1:687450791196:instance/i-0989da873d37845ce",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0989da873d37845ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vaultsphere-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00a5ad4696943f82a",
            "private_dns": "ip-10-0-1-181.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.181",
            "public_dns": "ec2-13-51-48-21.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.48.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-010ff464504b81ff3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097aba30a79857e0f",
            "tags": {
              "Name": "vaultsphere-backend"
            },
            "tags_all": {
              "Name": "vaultsphere-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00c062f344050e2b8"
            ]
          },
          "dependencies": [
            "aws_key_pair.vaultsphere_key",
            "aws_security_group.backend_sg",
            "aws_subnet.vaultsphere_subnet",
            "aws_vpc.vaultsphere_vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vaultsphere_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:687450791196:internet-gateway/igw-0b8bc10e79b141649",
            "id": "igw-0b8bc10e79b141649",
            "owner_id": "687450791196",
            "tags": {
              "Name": "vaultsphere-igw"
            },
            "tags_all": {
              "Name": "vaultsphere-igw"
            },
            "vpc_id": "vpc-05be4959d02877ece"
          },
          "dependencies": [
            "aws_vpc.vaultsphere_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vaultsphere_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:687450791196:route-table/rtb-0cbf9de8e145d3433",
            "id": "rtb-0cbf9de8e145d3433",
            "owner_id": "687450791196",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8bc10e79b141649",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vaultsphere-rt"
            },
            "tags_all": {
              "Name": "vaultsphere-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05be4959d02877ece"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vaultsphere_igw",
            "aws_vpc.vaultsphere_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vaultsphere_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055b0c2ba93330c22",
            "route_table_id": "rtb-0cbf9de8e145d3433",
            "subnet_id": "subnet-097aba30a79857e0f"
          },
          "dependencies": [
            "aws_internet_gateway.vaultsphere_igw",
            "aws_route_table.vaultsphere_rt",
            "aws_subnet.vaultsphere_subnet",
            "aws_vpc.vaultsphere_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:687450791196:security-group/sg-00c062f344050e2b8",
            "description": "Security group for VaultSphere backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c062f344050e2b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5001
              }
            ],
            "name": "vaultsphere-backend-sg",
            "name_prefix": "",
            "owner_id": "687450791196",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vaultsphere-backend-sg"
            },
            "tags_all": {
              "Name": "vaultsphere-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05be4959d02877ece"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vaultsphere_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vaultsphere_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:687450791196:subnet/subnet-097aba30a79857e0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097aba30a79857e0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "687450791196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vaultsphere-subnet"
            },
            "tags_all": {
              "Name": "vaultsphere-subnet"
            },
            "vpc_id": "vpc-05be4959d02877ece"
          },
          "dependencies": [
            "aws_vpc.vaultsphere_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vaultsphere_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:687450791196:vpc/vpc-05be4959d02877ece",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0530224a0e3d25c90",
            "default_route_table_id": "rtb-0957b06b6e532f279",
            "default_security_group_id": "sg-03ebc565d3c5e808f",
            "dhcp_options_id": "dopt-0db4480910cc7ec84",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05be4959d02877ece",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0957b06b6e532f279",
            "owner_id": "687450791196",
            "tags": {
              "Name": "vaultsphere-vpc"
            },
            "tags_all": {
              "Name": "vaultsphere-vpc"
            }
          }
        }
      ]
    }
  ]
}